# sound-of-e2

./: .gitignore  databricks.yml
misc/: in_memory_database.py  limited_size_cache.py  matrix_transformation.py  netflix.py  test_limited_size_cache.py  test_matrix_transformation.py
my_project/: databricks.yml  pyproject.toml
my_project/src/: sample_notebook.ipynb
shipping_package/: README.md  pyproject.toml
shipping_package/src/: shipping_package.py
shipping_package/test/: test_shipping_package.py
