[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipping-package"
version = "0.1.0"
description = "A Python project for managing shipping packages"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "philip-zee"}
]
license = {text = "MIT"}
keywords = ["shipping", "package", "logistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1.0"]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
